# world_model_gossip

./: .gitignore  README.md  _vizdoom.ini  evaluate.py  idea.md  main.py  pyproject.toml
runs/gossip/2025-06-26_20-17_70d114/: config.json
src/gossip_wm/: config.py  environment.py  models.py  replay_buffer.py  train_dynamics.py  training.py  verify_p1.py  verify_step2.py  verify_step3.py
src/gossip_wm/envs/: __init__.py  base_wrapper.py  bipedal_walker.py  bipedal_walker_wrapper.py  car_racing.py  car_racing_wrapper.py  crafter.py  lunar_lander.py  lunar_lander_wrapper.py  minerl.py  minigrid.py  minigrid_wrapper.py  vizdoom_wrapper.py
tests/: conftest.py  test_environment.py  test_envs.py  test_models.py  test_replay_buffer.py  test_training.py
