[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wm-gossip"
authors = [
  { name="Graham Noblit", email="grahamnoblit@pm.me" },
]
version = "0.1.0"
description = "Testing whether grounding in shared views helps world model hallucination"
readme = "README.md"
requires-python = ">=3.9, <3.12"
dependencies = [
    "torch",                 # The primary deep learning framework
    "torchvision",
    "numpy",                 # Fundamental package for scientific computing
    "Pillow",                # For image manipulation (from decoders)
    "imageio",      # Gifs
    "tensorboard",           # For logging and visualizing metrics
    "tqdm",                  # For progress bars in training loops
    "setuptools",
]

[project.urls]
Homepage = "https://github.com/your-username/gossip-world-models"
"Bug Tracker" = "https://github.com/your-username/gossip-world-models/issues"

# --- Optional Dependencies ---
# Install with `pip install -e .[dev]`, `pip install -e .[envs]`, etc.
[project.optional-dependencies]
# 1. Dependencies for local development (testing, linting)
dev = [
    "pytest", 
    "ruff", 
    "pre-commit",
]

# 2. Dependencies for ALL supported reinforcement learning environments
envs = [
    "gymnasium[box2d]", # For CarRacing, BipedalWalker, LunarLander
    "minigrid",
    "crafter",
    "minerl @ git+https://github.com/minerllabs/minerl",
]

# 3. A convenience group to install everything
all = [
    "wm-gossip[dev,envs]", # This tells pip to install the dev and envs groups
]


# --- Tool Configuration ---

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
select = ["E", "W", "F", "I", "C90", "N"] 
exclude = [".git", "__pycache__", "build", "dist", ".venv"]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]